# appimagecraft

./: .gitignore  .travis.yml  README.md  appimagecraft-aarch64.yml  appimagecraft-i386.yml  appimagecraft.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
appimagecraft/: __main__.py  _cli.py  _logging.py  _util.py
appimagecraft/builders/: __init__.py  autotools.py  base.py  cmake.py  qmake.py  script.py
appimagecraft/commands/: __init__.py  base.py  build.py  build_cmd.py  genscripts.py  genscripts_cmd.py
appimagecraft/generators/: __init__.py  appimage_build_script.py  bash_script.py  build_scripts.py  pre_post_build_scripts.py
appimagecraft/parsers/: __init__.py  appimagecraft_yml.py
appimagecraft/validators/: __init__.py  base.py  exceptions.py  shellcheck.py  util.py
ci/: build-appimage.sh  build-example-projects.sh
deployment/: AppRun.sh  appimagecraft.desktop
example-projects/autotools/: .gitignore  Makefile.am  appimagecraft.yml  autogen.sh  configure.ac
example-projects/cmake/: CMakeLists.txt  appimagecraft.yml  main.c
example-projects/qmake/: .gitignore  appimagecraft.yml  example.pro  main.cpp
