[tool.poetry]
name = "appimagecraft"
version = "0.0.1"
description = "appimagecraft generates shell scripts for building AppImages from simple declarative configuration files"
authors = ["TheAssassin <theassassin@assassinate-you.net>"]
license = "MIT"

[tool.poetry.scripts]
appimagecraft = "appimagecraft._cli:run"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^25.1.0"}
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
